# snakegame-by-openGL

./: .gitignore  CMakeLists.txt  README.md  build_cmake.bat
include/glad/: glad.h
src/: glad.c  main.cpp
